# rust-integration-template-imgconv

./: .gitignore  .pylintrc  Cargo.toml  LICENSE  readme.md
imgconv-cli/: Cargo.toml
imgconv-cli/src/: main.rs
imgconv-core/: Cargo.toml
imgconv-core/src/: lib.rs
imgconv-ffi/: Cargo.toml  test.py
imgconv-ffi/src/: lib.rs
imgconv-py/: Cargo.toml  imgconv_py.pyi  test.py
imgconv-py/src/: lib.rs
src/: main.rs
