[package]
name = "imgconv_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "imgconv_py"
crate-type = ["cdylib"]

[dependencies.imgconv-core]
path = "../imgconv-core"

[dependencies.pyo3]
version = "0.22"
features = ["abi3-py38", "extension-module"]

[package.metadata.maturin]
include = ["imgconv_py.pyi", "py.typed"]